--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "slugify": "^1.6.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
