--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-snap": "^1.23.0",
     "slugify": "^1.6.6",
     "web-vitals": "^2.1.4"
   },
@@ -25,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
