--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-snap": "^1.23.0",
     "slugify": "^1.6.6",
     "swiper": "^11.0.6",
