--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aidbase/chat": "^1.0.11",
     "@aws-sdk/client-s3": "^3.410.0",
     "@aws-sdk/s3-request-presigner": "^3.410.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
@@ -20,6 +21,7 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-photo-album": "^2.3.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
@@ -27,7 +29,8 @@
     "react-snap": "^1.23.0",
     "slugify": "^1.6.6",
     "swiper": "^11.0.6",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.17.2"
   },
   "scripts": {
     "start": "react-scripts start",
