--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "react-photo-album": "^2.3.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
-    "react-snap": "^1.23.0",
+    "react-snap": "^1.13.1",
     "slugify": "^1.6.6",
     "swiper": "^11.0.6",
     "web-vitals": "^2.1.4",
